force-app/force-app/force-app/main/default/objects/Executive_Call_Report__c/Executive_Call_Report__c.object-meta.xml
<CustomObject>
    <label>Executive Call Report</label>
    <nameField>
        <displayFormat>Report-{0000}</displayFormat>
        <label>Executive Call Report Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Executive Call Reports</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>