force-app/force-app/force-app/main/default/objects/Executive_Call_Report__c/fields/Collections__c.field-meta.xml
<CustomField>
    <fullName>Collections__c</fullName>
    <label>Collections</label>
    <length>100</length>
    <type>Text</type>
</CustomField>