force-app/force-app/force-app/main/default/objects/Executive_Call_Report__c/fields/Customer_Channel_partner__c.field-meta.xml
<CustomField>
    <fullName>Customer_Channel_partner__c</fullName>
    <label>Customer/Channel partner</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CUSTOMER</fullName>
            </value>
            <value>
                <fullName>CHANNEL PARTNER</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>