force-app/force-app/force-app/main/default/objects/Executive_Call_Report__c/fields/Customer_Name_Channel_Partners_Visited__c.field-meta.xml
<CustomField>
    <fullName>Customer_Name_Channel_Partners_Visited__c</fullName>
    <inlineHelpText>PROVIDE THE DETAILS OF ALL THE CUSTOMERS/CHANNEL PARTNERS VISITED</inlineHelpText>
    <label>Customer Name/Channel Partners Visited</label>
    <required>true</required>
    <type>TextArea</type>
</CustomField>