force-app/force-app/force-app/main/default/objects/Executive_Call_Report__c/fields/Hightlights_Of_The_Day__c.field-meta.xml
<CustomField>
    <fullName>Hightlights_Of_The_Day__c</fullName>
    <label>Highlights Of The Day</label>
    <type>TextArea</type>
</CustomField>