force-app/force-app/force-app/main/default/objects/Executive_Call_Report__c/fields/Market_Info_Competitor_Info_For_The_Day__c.field-meta.xml
<CustomField>
    <fullName>Market_Info_Competitor_Info_For_The_Day__c</fullName>
    <label>Market Info/Competitor Info For The Day</label>
    <type>TextArea</type>
</CustomField>