force-app/force-app/force-app/main/default/objects/Executive_Call_Report__c/fields/Name_Of_The_Executive__c.field-meta.xml
<CustomField>
    <fullName>Name_Of_The_Executive__c</fullName>
    <label>Name Of The Executive</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Rajagopalan T S</fullName>
            </value>
            <value>
                <fullName>Avinash Mani Tripathi</fullName>
            </value>
            <value>
                <fullName>Ganesan M</fullName>
            </value>
            <value>
                <fullName>Avijit Roy</fullName>
            </value>
            <value>
                <fullName>Kanheyalal P S</fullName>
            </value>
            <value>
                <fullName>Sriram K N</fullName>
            </value>
            <value>
                <fullName>Santhanam V</fullName>
            </value>
            <value>
                <fullName>Kiran Kumar K S</fullName>
            </value>
            <value>
                <fullName>Sridhar Babu K</fullName>
            </value>
            <value>
                <fullName>Ramesh N</fullName>
            </value>
            <value>
                <fullName>Gnana Desegan</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>