force-app/force-app/force-app/main/default/objects/Executive_Call_Report__c/fields/Nature_Of_Work__c.field-meta.xml
<CustomField>
    <fullName>Nature_Of_Work__c</fullName>
    <label>Nature Of Work</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>WORK FROM HOME</fullName>
            </value>
            <value>
                <fullName>WORK FROM OFFICE</fullName>
            </value>
            <value>
                <fullName>DIRECT CUSTOMER VISIT</fullName>
            </value>
            <value>
                <fullName>APPLIED LEAVE</fullName>
            </value>
            <value>
                <fullName>TRAVEL</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>