force-app/force-app/force-app/main/default/objects/Executive_Call_Report__c/fields/New_Customer_Contact__c.field-meta.xml
<CustomField>
    <fullName>New_Customer_Contact__c</fullName>
    <label>New Customer Contact</label>
    <length>100</length>
    <type>Text</type>
</CustomField>