force-app/force-app/force-app/main/default/objects/Executive_Call_Report__c/fields/Place_Of_Work__c.field-meta.xml
<CustomField>
    <fullName>Place_Of_Work__c</fullName>
    <label>Place Of Work</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AS PER ORIGINAL TRAVEL PLAN</fullName>
            </value>
            <value>
                <fullName>NOT AS PER ORIGINAL TRAVEL PLAN</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>