force-app/force-app/force-app/main/default/objects/Executive_Call_Report__c/fields/Product_Complaint_Attended_If_Any__c.field-meta.xml
<CustomField>
    <fullName>Product_Complaint_Attended_If_Any__c</fullName>
    <label>Product Complaint Attended If Any</label>
    <type>TextArea</type>
</CustomField>