force-app/force-app/force-app/main/default/objects/Executive_Call_Report__c/fields/Purchase_Order__c.field-meta.xml
<CustomField>
    <fullName>Purchase_Order__c</fullName>
    <label>Purchase Order</label>
    <type>TextArea</type>
</CustomField>