force-app/force-app/force-app/main/default/objects/Executive_Call_Report__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Customer_Channel_partner__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Existing Customer</fullName>
            </value>
            <value>
                <fullName>New Customer</fullName>
            </value>
            <value>
                <fullName>Revival Customer</fullName>
            </value>
            <value>
                <fullName>Existing Channel Partner</fullName>
            </value>
            <value>
                <fullName>Prospective Channel Partner</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>