force-app/force-app/force-app/main/default/objects/Executive_Call_Report__c/fields/Year__c.field-meta.xml
<CustomField>
    <fullName>Year__c</fullName>
    <inlineHelpText>Please select a Year from the picklist</inlineHelpText>
    <label>Year</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>2023</fullName>
            </value>
            <value>
                <fullName>2024</fullName>
            </value>
            <value>
                <fullName>2025</fullName>
            </value>
            <value>
                <fullName>2026</fullName>
            </value>
            <value>
                <fullName>2027</fullName>
            </value>
            <value>
                <fullName>2028</fullName>
            </value>
            <value>
                <fullName>2029</fullName>
            </value>
            <value>
                <fullName>2030</fullName>
            </value>
            <value>
                <fullName>2031</fullName>
            </value>
            <value>
                <fullName>2032</fullName>
            </value>
            <value>
                <fullName>2033</fullName>
            </value>
            <value>
                <fullName>2034</fullName>
            </value>
            <value>
                <fullName>2035</fullName>
            </value>
            <value>
                <fullName>2036</fullName>
            </value>
            <value>
                <fullName>2037</fullName>
            </value>
            <value>
                <fullName>2038</fullName>
            </value>
            <value>
                <fullName>2039</fullName>
            </value>
            <value>
                <fullName>2040</fullName>
            </value>
            <value>
                <fullName>2041</fullName>
            </value>
            <value>
                <fullName>2042</fullName>
            </value>
            <value>
                <fullName>2043</fullName>
            </value>
            <value>
                <fullName>2044</fullName>
            </value>
            <value>
                <fullName>2045</fullName>
            </value>
            <value>
                <fullName>2046</fullName>
            </value>
            <value>
                <fullName>2047</fullName>
            </value>
            <value>
                <fullName>2048</fullName>
            </value>
            <value>
                <fullName>2049</fullName>
            </value>
            <value>
                <fullName>2050</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>