force-app/force-app/force-app/main/default/objects/Executive_Call_Report__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Date_Of_Customer_Visit__c</columns>
    <columns>Customer_Channel_partner__c</columns>
    <columns>Nature_Of_Work__c</columns>
    <columns>Place_Of_Work__c</columns>
    <columns>Collections__c</columns>
    <columns>Hightlights_Of_The_Day__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>